<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_search_24_white"
        android:title="Search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_item_add"
        android:title="@string/add"
        android:icon="@drawable/ic_add_24"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/menu_item_remove"
        android:title="@string/remove"
        app:showAsAction="never"
        />

    <item android:id="@+id/menu_item_settings"
        android:title="@string/settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_item_switch"
        android:title="Switch"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="never" />
</menu>