<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        style="@style/title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingTop="@dimen/layout_padding"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/pioneersAcademy" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                style="@style/BodyTextStyle">

            </TextView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>